--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,6 @@ services:
             - 80:80
             - 443:443
         command: nginx -g 'daemon off;'
+    wordpress:
+        build: ./wordpress
+        command: php-fpm7.3 -F -R
