--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,13 +1,6 @@
 version: '3'
 
 services: 
-  redis:
-    build: redis/
-    image: redis
-    restart: unless-stopped
-    networks:
-        - connect
-
   nginx:
     restart: unless-stopped
     env_file: 
@@ -16,7 +9,7 @@ services:
       - connect
     depends_on:
       - wordpress
-    build: nginx/
+    build: requirements/nginx/
     image: nginx
     ports:
       - "443:443"
@@ -32,7 +25,7 @@ services:
     depends_on:
       - mariadb
       - redis
-    build: wordpress/
+    build: requirements/wordpress/
     image: wordpress
     volumes:
       - wp-data:/www
@@ -43,8 +36,8 @@ services:
       - .env
     networks: 
       - connect
-    build: mariadb/
-    image: maria
+    build: requirements/mariadb/
+    image: mariadb
     volumes: 
       - mdb-data:/var/lib/mysql
   
@@ -56,8 +49,15 @@ services:
       - connect
     ports:
       - "5555:5555"
-    build: adminer/
+    build: requirements/bonus/adminer/
     image: adminer
+
+  redis:
+    build: requirements/bonus/redis/
+    image: redis
+    restart: unless-stopped
+    networks:
+        - connect
 
 volumes:
     wp-data:
