add simple node website and change domain_name of wordpress

--- a/srcs/.env
+++ b/srcs/.env
@@ -15,3 +15,10 @@ WP_USER_PASS=user1
 WP_USER_EMAIL=user1@42.fr
 
 WP_TITLE="Hello World"
+
+#FTP
+FTP_USER=mobaz
+FTP_PASS=pass1
+
+#website
+PORT=4444
