add root variable

--- a/srcs/.env
+++ b/srcs/.env
@@ -5,6 +5,8 @@ DB_NAME=wpdb
 DB_USER=wpuser
 DB_PASS=12345
 DB_HOST=mariadb
+ROOT_USER=root
+ROOT_PASS=toor
 
 WP_ADMIN=taha
 WP_ADMIN_PASS=12345
@@ -22,3 +24,4 @@ FTP_PASS=pass1
 
 #website
 PORT=4444
+
